--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "gatsby": "^3.12.0",
+    "gatsby-plugin-gatsby-cloud": "^3.0.0",
+    "gatsby-plugin-manifest": "^3.12.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^7.5.2"
