--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
   "author": "Lillian Raae-Vea, Ola Vea",
   "keywords": [
     "gatsby",
-    "gatsby-function"
+    "gatsby-function",
+    "timeship",
+    "time-ship",
+    "time-travel",
+    "pirate ship",
+    "pirate princess",
+    "pirate show",
+    "Queen Benedicte @raae"
+
   ],
   "scripts": {
     "develop": "gatsby develop",
